# dotfiles

./: .gitmodules  .vimrc  do-the-thing.sh  do_the_thing.sh  dothething.sh  env.sh  install.py
alacritty/: alacritty.yml  do-the-thing.sh
bootctl/: arch.conf
chunkwm/: chunkwmrc
dotman/: pyproject.toml
dotman/dotman/: dotman.py
dotman/tests/: test_dotman.py
i3/: config
iTerm2/: com.googlecode.iterm2.plist
junka/bash/: bash_profile  bashrc  dotman.toml
junka/env/: user_profile.sh  user_rc.sh
junka/gdb/: dotman.toml  gdbinit
junka/git/: config  dotman.toml
junka/neovim/: dotman.toml  init.lua
junka/profile/: dotman.toml  profile
junka/readline/: dotman.toml  inputrc
junka/tmux/: dotman.toml  tmux.conf
junka/tsf/: dotman.toml  tsfrc
junka/zsh/: dotman.toml  zprofile  zshrc
latexmk/: do-the-thing.sh  latexmkrc
mako/: config  do-the-thing.sh
nvim/: do-the-thing.sh  init.vim
polybar/: config  launch.sh
prezto/: .zpreztorc
rofi/: config  do-the-thing.sh
skhd/: do-the-thing.sh  skhdrc
sushi/alacritty/: alacritty.yml  dotman.toml
sushi/devscripts/: .devscripts
sushi/env/: user_profile.sh  user_rc.sh
sushi/foot/: dotman.toml  foot.ini
sushi/git/: config  dotman.toml
sushi/git-buildpackage/: dotman.toml  gbp.conf
sway/: config  do-the-thing.sh
termite/: config  do-the-thing.sh
tmux/: .tmux.conf  tmux.conf
vim/: coc-settings.json  coc.vim  do-the-thing.sh  vimrc
waybar/: config  do-the-thing.sh  keyboard-layout.sh  launch.sh  style.css
yabai/: do-the-thing.sh  yabairc
zsh/: do-the-thing.sh  zprofile  zshrc
(+34 files in other folders)
