[tool.poetry]
name = "dotman"
version = "0.1.0"
description = ""
authors = ["tarberd <bernardo.mferrari@gmail.com>"]

[tool.poetry.scripts]
dotman = "dotman.dotman:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
